<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/btn_detail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/icon_corner"
        android:clickable="true"
        android:contentDescription="@string/detail_icon_des"
        android:elevation="3dp"
        android:src="@drawable/ic_info_detail"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0.695" />

    <ImageButton
        android:id="@+id/btn_back_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/icon_corner"
        android:elevation="3dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintEnd_toStartOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_arrow_des" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appbar_name"
        android:textSize="20sp"
        android:textColor="@color/textPrimaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_arrow"
        app:layout_constraintEnd_toStartOf="@+id/btn_detail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_back_arrow"
        app:layout_constraintTop_toTopOf="@+id/btn_back_arrow" />

    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:elevation="4dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/textVi"
                        style="@style/Theme.CustomDesign"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_location"
                        android:textSize="20sp"
                        android:contentDescription="@string/location_image" />

                    <TextView
                        android:id="@+id/textVi6"
                        style="@style/Theme.CustomDesign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="50dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="60dp"
                        android:textColor="@color/locationIcon"
                        android:gravity="center|start"
                        android:text="@string/location_text"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7.5dp"
                android:text="@string/select_all"
                android:textSize="17sp"
                android:textColor="@color/textSecondaryColor2"
                app:layout_constraintEnd_toStartOf="@+id/tv_unselect_all"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_location" />

            <TextView
                android:id="@+id/tv_unselect_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/unselect_all"
                android:textColor="@color/textSecondaryColor2"
                android:textSize="17sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_select_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_select_all" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_select_all"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_medicine_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="6"
                        tools:listitem="@layout/item_medicine_list" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/tv_total_amount"
                            style="@style/Theme.CustomDesign"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/locationIcon"
                            android:text="@string/total_amount"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_total_price"
                            style="@style/Theme.CustomDesign"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textColor="@color/textPrimaryColor"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textAlignment="textEnd"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <include
        android:id="@+id/include"
        layout="@layout/card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>