<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView"
        app:cardElevation="3dp"
        android:elevation="3dp"
        app:cardMaxElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_type"
                android:textSize="15sp"
                android:textColor="@color/textPrimaryColor"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                style="@style/Theme.CustomDesign"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:text="@string/pick_up_button"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/ripple_effect"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/colorPrimary"
                    android:textAppearance="@style/Theme.CustomDesign"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:text="@string/delivery_button"
                    android:textColor="@color/white"
                    android:background="@drawable/ripple_effect_deli"
                    android:textAppearance="@style/Theme.CustomDesign"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>